# ProjectTemplates

Cpp/: .env  CMakeLists.txt  Makefile
Cpp/src/: main.cpp
